updated For production

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "",
+  "name": "Santosh yadav",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "tinacms build && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
