--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
+    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -14,10 +14,10 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "@tinacms/cli": "^1.5.31",
+    
     "astro": "^3.4.3",
     "dotenv": "^16.3.1",
-    "tinacms": "^1.5.22",
+    
     "typescript": "^5.2.2"
   },
   "devDependencies": {
